1: Testimonial section | Done

--- a/index.html
+++ b/index.html
@@ -458,6 +458,117 @@
           </div>
         </div>
       </div>
+
+      <div class="container-fluid clients-testimonials-container">
+        <div class="row">
+          <h2 class="heading text-center">Clients Feedbacks<span class="stylish-font">.</span></h2>
+          <div class="col-12 col-md-12 col-lg-12">
+            <div id="testimonialsCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-6">
+                      <div class="testimonial-item d-flex justify-content-center align-self-center">
+                        <div class="client-img">
+                          <img src="assets/images/others/client-image.png" class="img-fluid" alt="client-image">
+                        </div>
+                        <div class="client-details">
+                          <div class="client-review">
+                            <p class="review-content">I absolutely love shopping at GreenHKMarket! They have a fantastic selection of organic and sustainable products. The quality is exceptional, and the customer service is top-notch. Highly recommended!</p>
+                            <h4 class="client-name">Vishal Parmar</h4>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                      <div class="testimonial-item d-flex justify-content-center align-self-center">
+                        <div class="client-img">
+                          <img src="assets/images/others/client-image.png" class="img-fluid" alt="client-image">
+                        </div>
+                        <div class="client-details">
+                          <div class="client-review">
+                            <p class="review-content">I'm so impressed with the range of organic and sustainable products offered by GreenHKMarket. The quality is excellent, and the packaging is eco-friendly. Highly recommend shopping here!</p>
+                            <h4 class="client-name">Nikhil Patel</h4>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-6">
+                      <div class="testimonial-item d-flex justify-content-center align-self-center">
+                        <div class="client-img">
+                          <img src="assets/images/others/client-image.png" class="img-fluid" alt="client-image">
+                        </div>
+                        <div class="client-details">
+                          <div class="client-review">
+                            <p class="review-content">I absolutely love shopping at GreenHKMarket! They have a fantastic selection of organic and sustainable products. The quality is exceptional, and the customer service is top-notch. Highly recommended!</p>
+                            <h4 class="client-name">Yatish Shekhava</h4>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                      <div class="testimonial-item d-flex justify-content-center align-self-center">
+                        <div class="client-img">
+                          <img src="assets/images/others/client-image.png" class="img-fluid" alt="client-image">
+                        </div>
+                        <div class="client-details">
+                          <div class="client-review">
+                            <p class="review-content">I'm so impressed with the range of organic and sustainable products offered by GreenHKMarket. The quality is excellent, and the packaging is eco-friendly. Highly recommend shopping here!</p>
+                            <h4 class="client-name">Mayur Jadav</h4>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <div class="row">
+                    <div class="col-12 col-md-6 col-lg-6">
+                      <div class="testimonial-item d-flex justify-content-center align-self-center">
+                        <div class="client-img">
+                          <img src="assets/images/others/client-image.png" class="img-fluid" alt="client-image">
+                        </div>
+                        <div class="client-details">
+                          <div class="client-review">
+                            <p class="review-content">I absolutely love shopping at GreenHKMarket! They have a fantastic selection of organic and sustainable products. The quality is exceptional, and the customer service is top-notch. Highly recommended!</p>
+                            <h4 class="client-name">Rahul Rathod</h4>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                    <div class="col-12 col-md-6 col-lg-6">
+                      <div class="testimonial-item d-flex justify-content-center align-self-center">
+                        <div class="client-img">
+                          <img src="assets/images/others/client-image.png" class="img-fluid" alt="client-image">
+                        </div>
+                        <div class="client-details">
+                          <div class="client-review">
+                            <p class="review-content">I'm so impressed with the range of organic and sustainable products offered by GreenHKMarket. The quality is excellent, and the packaging is eco-friendly. Highly recommend shopping here!</p>
+                            <h4 class="client-name">Manoj Shekhava</h4>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#testimonialsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
