1: Register page | Done 2: Login page | Done 3: Reset password page | Done

--- a/pages/reset-password.html
+++ b/pages/reset-password.html
@@ -94,56 +94,21 @@
         <div class="container-fluid account-form">
             <div class="row">
                 <div class="col-12 col-md-4 col-lg-4 m-auto shadow shadow-lg p-4">
-                    <h3 class="heading">Register<br>Your Account</h3>
+                    <h3 class="heading">Forgot<br>Password</h3>
                     <form action="javascript:void(0)" method="post" autocomplete="off">
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="firstNameInput" placeholder="First name">
-                            <label for="firstNameInput">First name</label>
-                        </div>
-                        <div class="form-floating mb-3">
-                            <input type="text" class="form-control" id="lastNameInput" placeholder="Last name">
-                            <label for="lastNameInput">Last name</label>
-                        </div>
                         <div class="form-floating mb-3">
                             <input type="email" class="form-control" id="userEmailInput" placeholder="Email *">
                             <label for="userEmailInput">Email <span class="text-danger">*</span></label>
                         </div>
-
-                        <div class="password-input d-flex justify-content-center w-100">
-                            <div class="form-floating mb-3 w-100">
-                                <input type="password" class="form-control" id="passwordInput" placeholder="Password *">
-                                <label for="passwordInput">Password <span class="text-danger">*</span></label>
-                            </div>
-                            <button class="mb-3 btn btn-primary password-eye-btn"   onclick="togglePasswordVisibility()"><i class="fa fa-eye" id="showPassIcon"></i></button>
-                        </div>
-                        
-                        <div class="password-input d-flex justify-content-center w-100">
-                            <div class="form-floating mb-3 w-100">
-                                <input type="password" class="form-control" id="confirmPasswordInput" placeholder="Confirm password *">
-                                <label for="confirmPasswordInput">Confirm Password <span class="text-danger">*</span></label>
-                            </div>
-                            <button class="mb-3 btn btn-primary password-eye-btn" onclick="toggleConfirmPasswordVisibility()" ><i class="fa fa-eye" id="showConfirmPassIcon"></i></button>
-                        </div>
-
-                        <div class="row">
+                        <div class="row submit-btn-row d-flex justify-content-around align-items-center">
                             <div class="col-12 col-md-12 col-lg-12">
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value=""id="confirmPrivacyChk">
-                                    <label class="form-check-label" for="confirmPrivacyChk">
-                                        By creating an account, you agree to our.
-                                    </label>
-                                  </div>
-                            </div>
-                        </div>
-                        <div class="row submit-btn-row">
-                            <div class="col-12 col-md-12 col-lg-12">
-                                <a href="javascript:void(0)" class="btn btn-primary">Create account</a>
+                                <a href="javascript:void(0)" class="btn btn-primary">Reset password</a>
                             </div>
                         </div>
                         <hr>
                         <div class="row sign-in-link-row">
                             <div class="col-12 col-md-12 col-lg-12">
-                                <a href="login.html">Already have an account ?</a>
+                                <a href="login.html">Login from here</a><br>
                             </div>
                         </div>
                     </form>
