--- a/pages/blank-page.html
+++ b/pages/blank-page.html
@@ -83,7 +83,7 @@
                 </div>                
               </form>
               <div class="d-flex icon-container mb-2 mb-lg-0 justify-content-end align-items-center">
-                <a href="javascript:void(0)"><i class="fa fa-user"></i> Account</a>
+                <a href="register.html"><i class="fa fa-user"></i> Account</a>
                 <a href="javascript:void(0)"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Cart</a>
               </div>
             </div>
