--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">About us</a>
+                  <a class="nav-link" href="pages/about-page.html">About us</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="javascript:void(0)">Blog</a>
@@ -984,7 +984,7 @@
               <ul class="list-group">
                 <li class="list-group-item"><a href="index.html" class="active">Home</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">About</a></li>
+                <li class="list-group-item"><a href="pages/about-page.html">About</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Blog</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Contact us</a></li>
               </ul>
