1: Contact us page design | Done

--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <a class="nav-link" href="javascript:void(0)">Blog</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Contact us</a>
+                  <a class="nav-link" href="pages/contact-page.html">Contact us</a>
                 </li>
               </ul>
               <form class="d-flex me-auto mb-2 mb-lg-0" role="search">
@@ -986,7 +986,7 @@
                 <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
                 <li class="list-group-item"><a href="pages/about-page.html">About</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Blog</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">Contact us</a></li>
+                <li class="list-group-item"><a href="pages/contact-page.html">Contact us</a></li>
               </ul>
             </div>
             <div class="col-12 col-md-3 col-lg-3 contact-col">
