--- a/pages/contact-page.html
+++ b/pages/contact-page.html
@@ -59,10 +59,10 @@
                   </ul>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">About us</a>
+                  <a class="nav-link" href="about-page.html">About us</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link" href="javascript:void(0)">Blog</a>
+                  <a class="nav-link" href="blog-page.html">Blog</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link active" href="contact-page.html">Contact us</a>
@@ -231,9 +231,9 @@
               <ul class="list-group">
                 <li class="list-group-item"><a href="../index.html" class="active">Home</a></li>
                 <li class="list-group-item"><a href="javascript:void(0)">Shop</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">About</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">Blog</a></li>
-                <li class="list-group-item"><a href="javascript:void(0)">Contact us</a></li>
+                <li class="list-group-item"><a href="about-page.html">About</a></li>
+                <li class="list-group-item"><a href="blog-page.html">Blog</a></li>
+                <li class="list-group-item"><a href="contact-page.html">Contact us</a></li>
               </ul>
             </div>
             <div class="col-12 col-md-3 col-lg-3 contact-col">
