1: Cart page design | Done

--- a/pages/checkout-page.html
+++ b/pages/checkout-page.html
@@ -211,10 +211,10 @@
                     <ul class="list-group">
                         <li class="list-group-item d-flex">
                             <div class="product-name">
-                                Vegetables Juices <span class="product-qty">× 2</span>
+                              Together Health Vegan Vitamin D3 food supplement 30 caps <span class="product-qty">× 1</span>
                             </div>
                             <div class="product-price">
-                                £298.00
+                              £5.59
                             </div>
                         </li>
                         <li class="list-group-item d-flex">
@@ -222,7 +222,7 @@
                                 Vegetables Juices <span class="product-qty">× 2</span>
                             </div>
                             <div class="product-price">
-                                £298.00
+                              £4
                             </div>
                         </li>
                         <li class="list-group-item d-flex" id="shippingChargeItem">
@@ -238,7 +238,7 @@
                                 Order total
                             </div>
                             <div class="product-price">
-                                £340.00
+                                £17.54
                             </div>
                         </li>
                     </ul>
