--- a/pages/product-page.html
+++ b/pages/product-page.html
@@ -96,24 +96,24 @@
                 <div class="row">
                     <div class="col-12 col-md-12 col-lg-12">
                         <div class="main-img-container">
-                            <img src="../assets/images/product-images/7.webp" class="img-fluid " alt="product-img" id="main-image">
+                            <img src="../assets/images/product-images/product-page-img-1.webp" class="img-fluid " alt="product-img" id="main-image">
                         </div>
                     </div>
                 </div>
                 <div class="row img-gallery">
                     <div class="col-4 col-md-2 col-lg-2">
                         <div class="img-container">
-                            <img src="../assets/images/product-images/7.webp" class="img-fluid gallery-product-img" alt="product-img">
+                            <img src="../assets/images/product-images/product-page-img-1.webp" class="img-fluid gallery-product-img" alt="product-img">
                         </div>
                     </div>
                     <div class="col-4 col-md-2 col-lg-2">
                         <div class="img-container">
-                            <img src="../assets/images/product-images/1.png" class="img-fluid gallery-product-img" alt="product-img">
+                            <img src="../assets/images/product-images/product-page-img-2.webp" class="img-fluid gallery-product-img" alt="product-img">
                         </div>
                     </div>
                     <div class="col-4 col-md-2 col-lg-2">
                         <div class="img-container">
-                            <img src="../assets/images/product-images/11.webp" class="img-fluid gallery-product-img" alt="product-img">
+                            <img src="../assets/images/product-images/product-page-img-3.webp" class="img-fluid gallery-product-img" alt="product-img">
                         </div>
                     </div>
                 </div>
@@ -124,11 +124,11 @@
                         <a href="javascript:void(0)">Eco-Friendly Home and Kitchen</a>
                     </div>
                     <div class="product-title">
-                        <h3>Planet Organic Easter Low Sugar Hamper each</h3>
+                        <h3>Together Health Vegan Vitamin D3 food supplement 30 caps</h3>
                     </div>
                     <div class="product-price">
-                        <h5 class="sell-price">£50.00</h5>
-                        <h5 class="previous-price">£55.00</h5>
+                        <h5 class="sell-price">£5.59</h5>
+                        <h5 class="previous-price">£6.99</h5>
                     </div>
                     <div class="rating-item">
                         <div class="add-wishlist"><a href="javascript:void(0)"> <i class="fa-regular fa-heart"></i> Add to wishlist</a></div>
@@ -153,7 +153,7 @@
                     </div>
                     <div class="product-description">
                         <h6>Product Description:</h6>
-                        <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <p>Vitamin D is responsible for maintaining bone and teeth health and influences our mood/ energy levels dramatically. Vitamin D is often absorbed through the sun, dairy sources or leafy green vegetables; however, many people lack Vitamin D every day. This can be especially true for people living in colder countries where natural sunlight may be sparse during the year or vegans/ plant-based diets who do not use animal-based products. Well, Together Health has crafted the perfect plant-based vitamin D supplements that are suitable for vegans.</p>
                     </div>
                 </div>
             </div>
