--- a/pages/cart-page.html
+++ b/pages/cart-page.html
@@ -90,7 +90,81 @@
           </div>
         </nav>
       </header>
-
+        <div class="container-fluid cart-container">
+          <div class="row">
+            <div class="col-12 col-md-8 col-lg-8 cart-table-col">
+                <div class="table-responsive">
+                  <table class="table text-center" >
+                    <thead>
+                      <tr>
+                        <th scope="col">Remove</th>
+                        <th scope="col">Image</th>
+                        <th scope="col">Name</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">QTY</th>
+                        <th scope="col">Total price</th>
+                      </tr>
+                    </thead>
+                    <tbody class="w-100">
+                      <tr>
+                        <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
+                        <td><a href="javascript:void(0)"><img src="../assets/images/product-images/10.webp" class="img-fluid product-img" alt="Product image"></a></td>
+                        <td><a href="javascript:void(0)" class="product-title-link">Together Health Vegan Vitamin D3 food supplement 30 caps</a></td>
+                        <td>£5.59</td>
+                        <td><input type="number" class="form-control" min="1" max="10" value="1"></td>
+                        <td>£5.59</td>
+                      </tr>
+                      <tr>
+                        <td><a href="javascript:void(0)" class="remove-link"><i class="fa-solid fa-trash"></i></a></td>
+                        <td><a href="javascript:void(0)"><img src="../assets/images/product-images/1.png" class="img-fluid product-img" alt="Product image"></a></td>
+                        <td><a href="javascript:void(0)" class="product-title-link">Vegetables Juices</a></td>
+                        <td>£2</td>
+                        <td><input type="number" class="form-control" min="1" max="10" value="2"></td>
+                        <td>£4</td>
+                      </tr>
+                    </tbody>
+                  </table>
+                </div>
+                <div class="update-btn-col">
+                  <a href="javascript:void(0)" class="btn btn-primary">Update cart</a>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 col-lg-4 total-col">
+              <h3>Cart totals</h3>
+              <div class="total-content">
+                  <ul class="list-group">
+                      <li class="list-group-item d-flex">
+                          <div class="product-name">
+                            Cart Subtotal
+                          </div>
+                          <div class="product-price">
+                              £9.54
+                          </div>
+                      </li>
+                      <li class="list-group-item d-flex">
+                          <div class="product-name">
+                            Shipping and Handing
+                          </div>
+                          <div class="product-price">
+                              £2.06
+                          </div>
+                      </li>
+                      <li class="list-group-item d-flex" id="orderTotal">
+                          <div class="product-name">
+                              Order total
+                          </div>
+                          <div class="product-price">
+                              £12.00
+                          </div>
+                      </li>
+                  </ul>
+              </div>
+              <div class="form-button">
+                  <a href="checkout-page.html" class="btn btn-primary" id="checkoutBtn">Checkout <i class="fa-sharp fa-solid fa-cart-shopping"></i></a>
+              </div>
+            </div>
+          </div>
+        </div>
       <footer>
         <div class="container-fluid">
           <div class="row go-to-top-row">
